исправление замечаний sonarQube (#55)